[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "RdbEX"
version = "0.2.2"
description = "Replit DataBase EXtended"
authors = ["Kokonico <kokonico@duck.com>",]
readme = "README.md"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [ ".cache",]

[tool.ruff]
select = [ "E", "W", "F", "I", "B", "C4", "ARG", "SIM",]
ignore = [ "W291", "W292", "W293",]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = ">=3.3.2,<4.0.0"
importlib-metadata = "^6.8.0"
packaging = "^23.2"
